--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -1,10 +1,8 @@
 [project]
-name = "agent"
+name = "src"
 version = "0.0.1"
-description = "Starter template for making a new agent LangGraph."
-authors = [
-    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
-]
+description = ""
+
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.10,<4.0.0"
@@ -28,11 +26,7 @@ dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
 requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-packages = ["langgraph.templates.agent", "agent"]
-[tool.setuptools.package-dir]
-"langgraph.templates.agent" = "src/agent"
-"agent" = "src/agent"
+
 
 
 [tool.setuptools.package-data]
