--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "langchain-core (>=1.2.7,<2.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "langchain-astradb (>=1.0.0,<2.0.0)",
+    "pydantic-settings (>=2.12.0,<3.0.0)",
+    "langchain-google-genai (>=4.2.0,<5.0.0)",
 ]
 
 
